# orc_twincat_sil

./: .gitignore  .gitmodules  README.md
orc-a/: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  TODO.md  cmake-format.yaml  pyproject.toml
orc-a/.dev_util/: Dockerfile  run_code_coverage.sh
orc-a/.devcontainer/: Dockerfile  devcontainer.json  postCreate.sh
orc-a/.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
orc-a/.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
orc-a/.github/workflows/: ci.yml  docs.yml  release.yml
orc-a/cmake/: Findmujoco.cmake  orcConfig.cmake.in
orc-a/doc/: CMakeLists.txt  Doxyfile.in  architecture.rst  changelog.rst  conf.py  conventions.rst  faq.rst  getting_started.rst  index.rst  install.rst  introduction.rst
orc-a/doc/advanced/: cmake.rst
orc-a/doc/api/: orc.rst  orcpy.rst
orc-a/doc/basics/: com.rst  controller.rst  interpolator.rst  robots.rst  trajectory.rst
orc-a/examples/cpp/: CMakeLists.txt  interpolator_example.cpp
orc-a/examples/python/: README.md  client_with_visualization.py  dense_trajectory_streaming_new.py  interpolator_example.py  robot_state_print.py  sending_iiwa_ex.py  sending_jointspace.py  sending_kinova_ex.py  sending_linear_axis_ex.py  sending_param_ex.py  sending_robot9dof_ex.py  simulate_iiwa.py  simulate_kinova.py  simulate_linear_axis.py  simulate_robot9dof.py
orc-a/examples/python/hybrid_force_motion/experiment_whiteboard/: sending_circle_square.py  sending_simple.py  simulate.py
orc-a/examples/python/hybrid_force_motion/sponge/: sending_ex.py  simulate_iiwa.py
orc-a/examples/python/orc_paper_experiments/: README.md  _headless_sim.py  calibrate_kinova_sysid.py  sending_leminscate.py  sending_simple.py  sending_square_octogon.py
orc-a/examples/python/orc_paper_experiments/paper_figure/: .gitignore  fig_kinova_lem.tex  make_lemniscate_figdata.py
orc-a/include/orc/: Orc.h  OrcTypes.h  RobotStatus.h  RobotTraits.h  Splines
orc-a/include/orc/com/: RobotState.h  TcServerUtil.h  TrajectoryServer.h  com_settings.h
orc-a/include/orc/com/flatbuffers/: FlatBufferDeserializer.h  FlatBufferEigen.h  FlatBufferRobotState.h  FlatBufferSerializer.h  FlatBufferSplitting.h  FlatBufferTwinCAT.h  FlatBuffers.h  orc_messages_generated.h
orc-a/include/orc/control/: Controller.h  ControllerBases.h  ControllerParameter.h  ControllerType.h
orc-a/include/orc/control/controller/: CoulombFrictionCompController.h  FrictionCompController.h  GravityCompController.h  HybridForceMotionController.h  SingularPerturbationController.h
orc-a/include/orc/interpolator/: Interpolator.h  InterpolatorBase.h  ManifoldInterpolatorBase.h
orc-a/include/orc/interpolator/cartesian/: CartesianPoseInterpolator.h
orc-a/include/orc/interpolator/jointspace/: SplineJointInterpolator.h
orc-a/include/orc/robots/: DummyRobot.h  Iiwa.h  Kinova.h  LinearAxis.h  Robot.h  RobotData.h
orc-a/include/orc/sig/: filter.h
orc-a/include/orc/trajectory/: CartesianVelocityTrajectory.h  DenseJointspaceTrajectory.h  HybridForceMotionTrajectory.h  JointspaceTrajectory.h  JointspaceVelocityTrajectory.h  TaskspaceTrajectory.h  Trajectories.h  TrajectoryBase.h  TrajectoryPointStorage.h  TrajectoryQueue.h  TrajectoryType.h
orc-a/include/orc/trajectory/singleevent/: CartesianCtrParamTrajectory.h  JointCtrParamTrajectory.h  NullspaceTrajectory.h
orc-a/include/orc/util/: Angle.h  ExecutionTimer.h  Logger.h  Time.h  eigen_tc_settings.h  import_eigen.h  import_flatbuffers.h  import_mujoco.h  quatutil.h
orc-a/include/orc/util/Splines/: Spline.h  SplineFitting.h  SplineFittingCustom.h  SplineFwd.h
orc-a/models/: dummy_model.mjb  dummy_model.xml  iiwa_hanging.xml  iiwa_standing.mjb  iiwa_standing.xml  linear_axis_meshless.xml
orc-a/models/generation_scripts/: generate_iiwa_hanging_adapter_pen.py  generate_iiwa_hanging_with_sponge.py  generate_iiwa_meshed.py  generate_kinova.py  generate_pascal_bernoulli.py  generate_pascal_with_pen.py
orc-a/models/presets/: iiwa_hanging_adapter_pen.mjb  iiwa_hanging_with_sponge.mjb  pascal_bernoulli.mjb
orc-a/proto/: orc_messages.fbs
orc-a/python/: .cibuildwheels.toml  CMakeLists.txt
orc-a/python/core/: __init__.py
orc-a/python/core/src/: ControllerParameter_bindings.h  Iiwa_bindings.cpp  Kinova_bindings.cpp  LinearAxis_bindings.cpp  Logger_bindings.h  RobotData_bindings.h  RobotState_bindings.h  Robot_bindings.h  bindings.cpp
orc-a/python/core/src/com/: FlatBufferSerializer_bindings.h
orc-a/python/core/src/interpolator/: Interpolator_bindings.h
orc-a/python/robots/: Iiwa.py  Kinova.py  LinearAxis.py  Robot.py  Robot9DOF.py  __init__.py  _trajectory_sender.py  util_functions.py
orc-a/python/robots/com/: KinovaConnection.py  __init__.py
orc-a/src/: Logger.cpp
orc-a/tests/: CMakeLists.txt  Robot_test.cpp  angle_test.cpp  cartesian_interp_edge_test.cpp  controller_edge_test.cpp  controller_test.cpp  dense_jointspace_trajectory_test.cpp  exec_timer_test.cpp  filter_edge_test.cpp  filter_test.cpp  flatbuffer_ctrparam_stop_test.cpp  flatbuffer_velocity_hybrid_test.cpp  hybrid_force_motion_test.cpp  hybrid_trajectory_test.cpp  iiwa_test.cpp  interpolator_comprehensive_test.cpp  interpolator_test.cpp  model_loading_tests.cpp  plot_interp.py  plot_traj_discontinuity.py  quatutil_test.cpp  robot_state_test.cpp  robot_traits_test.cpp  robot_update_test.cpp  robot_validation_test.cpp  serialization_roundtrip_test.cpp  serialization_splitting_test.cpp  singleevent_trajectory_test.cpp  spline_fitting_test.cpp  taskspace_trajectory_test.cpp  test_constants.h  test_helpers.h  time_arith_test.cpp  time_comprehensive_test.cpp  time_test.cpp  traj_discontinuity_test.cpp  traj_handoff_test.cpp  trajectory_comprehensive_test.cpp  trajectory_test.cpp  trajqueue_test.cpp
orc-a/tests/python/: test_bindings_attr_names.py  test_bindings_dynamic.py  test_bindings_static.py  test_example_paths.py  test_example_runs.py  test_robot_ctor_parity.py
(+285 files in other folders)
